--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@ body {
   margin: 0em;
 }
 
+#description1 {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+}
+
+
 body {
   margin: 0em; 
   padding: 0em;
